--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -8,9 +6,9 @@ services:
     volumes:
       - ..:/workspace:cached
       - node_modules:/workspace/node_modules
-      - pnpm_store:/home/vscode/.pnpm-store
-      - vscode_extensions:/home/vscode/.vscode-server/extensions
-      - vscode_insiders_extensions:/home/vscode/.vscode-server-insiders/extensions
+      - pnpm_store:/home/notso-user/.pnpm-store
+      - vscode_extensions:/home/notso-user/.vscode-server/extensions
+      - vscode_insiders_extensions:/home/notso-user/.vscode-server-insiders/extensions
     command: sleep infinity
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/platform_db
@@ -76,7 +74,7 @@ services:
 
   minio:
     image: minio/minio:latest
-    command: server /data --console-address ":9001"
+    command: server /data --console-address ":9002"
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
