--- a/apps/tenant-service/package.json
+++ b/apps/tenant-service/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint .",
     "type-check": "tsc --noEmit",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
