--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "docker:up": "./scripts/dev-setup.sh",
     "docker:down": "docker-compose down",
     "docker:reset": "docker-compose down -v && ./scripts/dev-setup.sh",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
