fix: resolve TypeScript build errors and configuration issues
- Fix TypeScript configurations across all packages and services
- Remove Jest type references (using Vitest instead)
- Resolve duplicate type exports (ApiKey renamed to ApiKeyId)
- Add tsconfig dependencies to all services
- Add type:module to service package.json files
- Create placeholder entry points for all services
- Move Fastify type augmentations to separate types.d.ts file
- Comment out unused ID types for future reference
- Update all services to use @saas/tsconfig/node.json

🤖 Generated with AI assistance

--- a/packages/shared/types/package.json
+++ b/packages/shared/types/package.json
@@ -13,13 +13,14 @@
     }
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "clean": "rm -rf dist",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
     "@saas/tsconfig": "workspace:*",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   }
 }
