--- a/apps/chatbot-service/package.json
+++ b/apps/chatbot-service/package.json
@@ -2,6 +2,7 @@
   "name": "@saas/chatbot-service",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "nodemon --exec tsx src/index.ts",
     "build": "tsc",
@@ -22,6 +23,7 @@
     "pino": "^9.7.0"
   },
   "devDependencies": {
+    "@saas/tsconfig": "workspace:*",
     "@types/node": "^24.0.13",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.3",
