--- a/packages/shared/types/tsconfig.json
+++ b/packages/shared/types/tsconfig.json
@@ -1,8 +1,14 @@
 {
-  "extends": "@saas/tsconfig/node.json",
+  "extends": "../../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "noEmit": false,
+    "composite": false,
+    "incremental": false,
+    "declaration": true,
+    "declarationMap": true,
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
