fix: update Git configuration in post-create and post-start scripts

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -159,8 +159,7 @@
         "streetsidesoftware.code-spell-checker",
         "usernamehw.errorlens",
         "naumovs.color-highlight",
-        "oderwat.indent-rainbow",
-        "2gua.rainbow-brackets"
+        "oderwat.indent-rainbow"
       ]
     }
   },
