fix: resolve all biome formatting and linting issues
- Add Voyage AI integration for embeddings support
- Fix all import ordering issues according to ESLint rules
- Implement proper error handling instead of silent catches
- Fix TypeScript configurations and build issues
- Update Prisma client imports and database package config
- Fix Redis imports from default to named imports
- Implement missing functionality (pagination, logout, etc.)
- Add count method to repository interfaces
- Configure biome for formatting and linting
- Update lint-staged to use biome exclusively
- Fix all build errors across all packages
- Add missing dependencies (bcryptjs, @saas/tsconfig)
- Resolve unused variable warnings
- Enable parameter decorators in biome config
- Allow empty blocks and format with errors

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ JWT_EXPIRES_IN=7d
 # AI Providers
 OPENAI_API_KEY=sk-...
 # ANTHROPIC_API_KEY=sk-ant-...
+# VOYAGE_API_KEY=pa-...
 # GOOGLE_VERTEX_PROJECT_ID=your-project-id
 # GOOGLE_VERTEX_LOCATION=us-central1
 
