--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,68 +1,68 @@
 {
-  "version": "2.0.0",
   "tasks": [
     {
-      "label": "Start All Services",
-      "type": "shell",
-      "command": "pnpm",
       "args": ["dev"],
+      "command": "pnpm",
       "group": {
-        "kind": "build",
-        "isDefault": true
+        "isDefault": true,
+        "kind": "build"
       },
+      "label": "Start All Services",
       "presentation": {
-        "reveal": "always",
-        "panel": "new"
+        "panel": "new",
+        "reveal": "always"
       },
-      "problemMatcher": []
+      "problemMatcher": [],
+      "type": "shell"
     },
     {
-      "label": "Run Database Migrations",
-      "type": "shell",
-      "command": "pnpm",
       "args": ["db:migrate"],
+      "command": "pnpm",
+      "label": "Run Database Migrations",
       "presentation": {
-        "reveal": "always",
-        "panel": "shared"
+        "panel": "shared",
+        "reveal": "always"
       },
-      "problemMatcher": []
+      "problemMatcher": [],
+      "type": "shell"
     },
     {
-      "label": "Run Tests",
-      "type": "shell",
-      "command": "pnpm",
       "args": ["test"],
+      "command": "pnpm",
       "group": {
-        "kind": "test",
-        "isDefault": true
+        "isDefault": true,
+        "kind": "test"
       },
+      "label": "Run Tests",
       "presentation": {
-        "reveal": "always",
-        "panel": "shared"
+        "panel": "shared",
+        "reveal": "always"
       },
-      "problemMatcher": []
+      "problemMatcher": [],
+      "type": "shell"
     },
     {
-      "label": "Lint Code",
-      "type": "shell",
-      "command": "pnpm",
       "args": ["lint"],
+      "command": "pnpm",
+      "label": "Lint Code",
       "presentation": {
-        "reveal": "always",
-        "panel": "shared"
+        "panel": "shared",
+        "reveal": "always"
       },
-      "problemMatcher": ["$eslint-stylish"]
+      "problemMatcher": ["$eslint-stylish"],
+      "type": "shell"
     },
     {
-      "label": "Type Check",
-      "type": "shell",
-      "command": "pnpm",
       "args": ["type-check"],
+      "command": "pnpm",
+      "label": "Type Check",
       "presentation": {
-        "reveal": "always",
-        "panel": "shared"
+        "panel": "shared",
+        "reveal": "always"
       },
-      "problemMatcher": ["$tsc"]
+      "problemMatcher": ["$tsc"],
+      "type": "shell"
     }
-  ]
+  ],
+  "version": "2.0.0"
 }
