--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -1,16 +1,4 @@
 {
-  "name": "@saas/worker",
-  "version": "0.0.1",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "tsx watch src/main.ts",
-    "build": "tsup",
-    "start": "node dist/main.js",
-    "test": "vitest",
-    "lint": "eslint .",
-    "type-check": "tsc --noEmit"
-  },
   "dependencies": {
     "@prisma/client": "^6.11.1",
     "@saas/database": "workspace:*",
@@ -22,10 +10,24 @@
     "pino": "^9.7.0"
   },
   "devDependencies": {
+    "@saas/tsconfig": "workspace:*",
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^24.0.13",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
-  }
+  },
+  "name": "@saas/worker",
+  "private": true,
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsx watch src/main.ts",
+    "lint": "eslint .",
+    "start": "node dist/main.js",
+    "test": "vitest",
+    "type-check": "tsc --noEmit"
+  },
+  "type": "module",
+  "version": "0.0.1"
 }
