--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,102 +1,7 @@
 {
-  "name": "SaaS Chatbot Platform",
-  "dockerComposeFile": "docker-compose.yml",
-  "service": "app",
-  "workspaceFolder": "/workspace",
-
-  // Features to add to the dev container
-  "features": {
-    "ghcr.io/devcontainers/features/node:1": {},
-    "ghcr.io/devcontainers/features/common-utils:2": {
-      "installZsh": true,
-      "configureZshAsDefaultShell": true,
-      "installOhMyZsh": true,
-      "upgradePackages": true,
-      "username": "notso-user",
-      "userUid": "1001",
-      "userGid": "1001"
-    },
-    "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.13",
-      "installTools": true,
-      "installJupyterlab": false,
-      "optimize": false
-    },
-    "ghcr.io/devcontainers/features/go:1": {
-      "version": "1.24.5"
-    },
-    "ghcr.io/devcontainers/features/git:1": {},
-    "ghcr.io/devcontainers/features/git-lfs:1": {},
-    "ghcr.io/devcontainers/features/github-cli:1": {},
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
-    "ghcr.io/devcontainers/features/aws-cli:1": {}
-  },
-
   // Configure VS Code settings
   "customizations": {
     "vscode": {
-      "settings": {
-        "terminal.integrated.defaultProfile.linux": "zsh",
-        "terminal.integrated.profiles.linux": {
-          "zsh": {
-            "path": "/usr/bin/zsh"
-          }
-        },
-        "editor.formatOnSave": true,
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.codeActionsOnSave": {
-          "source.fixAll.eslint": "always"
-        },
-        "typescript.tsdk": "node_modules/typescript/lib",
-        "typescript.enablePromptUseWorkspaceTsdk": true,
-        "eslint.validate": [
-          "javascript",
-          "javascriptreact",
-          "typescript",
-          "typescriptreact"
-        ],
-        "files.exclude": {
-          "**/node_modules": true,
-          "**/.git": true,
-          "**/.DS_Store": true,
-          "**/dist": true,
-          "**/build": true,
-          "**/.next": true,
-          "**/coverage": true
-        },
-        "search.exclude": {
-          "**/node_modules": true,
-          "**/dist": true,
-          "**/build": true,
-          "**/.next": true,
-          "**/coverage": true,
-          "pnpm-lock.yaml": true
-        },
-        "[typescript]": {
-          "editor.defaultFormatter": "esbenp.prettier-vscode"
-        },
-        "[typescriptreact]": {
-          "editor.defaultFormatter": "esbenp.prettier-vscode"
-        },
-        "[json]": {
-          "editor.defaultFormatter": "esbenp.prettier-vscode"
-        },
-        "[jsonc]": {
-          "editor.defaultFormatter": "esbenp.prettier-vscode"
-        },
-        "[yaml]": {
-          "editor.defaultFormatter": "esbenp.prettier-vscode"
-        },
-        "[markdown]": {
-          "editor.defaultFormatter": "esbenp.prettier-vscode"
-        },
-        "git.autofetch": true,
-        "git.confirmSync": false,
-        "git.enableSmartCommit": true,
-        "npm.packageManager": "pnpm"
-      },
-
       // Extensions to install
       "extensions": [
         // Core development
@@ -160,15 +65,107 @@
         "usernamehw.errorlens",
         "naumovs.color-highlight",
         "oderwat.indent-rainbow"
-      ]
+      ],
+      "settings": {
+        "[json]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "[jsonc]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "[markdown]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "[typescript]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "[typescriptreact]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "[yaml]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "editor.codeActionsOnSave": {
+          "source.fixAll.eslint": "always"
+        },
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true,
+        "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+        "files.exclude": {
+          "**/.DS_Store": true,
+          "**/.git": true,
+          "**/.next": true,
+          "**/build": true,
+          "**/coverage": true,
+          "**/dist": true,
+          "**/node_modules": true
+        },
+        "git.autofetch": true,
+        "git.confirmSync": false,
+        "git.enableSmartCommit": true,
+        "npm.packageManager": "pnpm",
+        "search.exclude": {
+          "**/.next": true,
+          "**/build": true,
+          "**/coverage": true,
+          "**/dist": true,
+          "**/node_modules": true,
+          "pnpm-lock.yaml": true
+        },
+        "terminal.integrated.defaultProfile.linux": "zsh",
+        "terminal.integrated.profiles.linux": {
+          "zsh": {
+            "path": "/usr/bin/zsh"
+          }
+        },
+        "typescript.enablePromptUseWorkspaceTsdk": true,
+        "typescript.tsdk": "node_modules/typescript/lib"
+      }
+    }
+  },
+  "dockerComposeFile": "docker-compose.yml",
+
+  // Features to add to the dev container
+  "features": {
+    "ghcr.io/devcontainers/features/aws-cli:1": {},
+    "ghcr.io/devcontainers/features/common-utils:2": {
+      "configureZshAsDefaultShell": true,
+      "installOhMyZsh": true,
+      "installZsh": true,
+      "upgradePackages": true,
+      "userGid": "1001",
+      "username": "notso-user",
+      "userUid": "1001"
+    },
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/devcontainers/features/git-lfs:1": {},
+    "ghcr.io/devcontainers/features/git:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {},
+    "ghcr.io/devcontainers/features/go:1": {
+      "version": "1.24.5"
+    },
+    "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
+    "ghcr.io/devcontainers/features/node:1": {},
+    "ghcr.io/devcontainers/features/python:1": {
+      "installJupyterlab": false,
+      "installTools": true,
+      "optimize": false,
+      "version": "3.13"
     }
   },
 
   // Port forwarding
   "forwardPorts": [
-    3000, 3001, 3002, 3003, 3004, 3005, 3006, 3007, 3008, 3009, 5432, 6379,
-    9000, 9001, 9200, 15672, 5050, 8081, 8025, 8888
+    3000, 3001, 3002, 3003, 3004, 3005, 3006, 3007, 3008, 3009, 5432, 6379, 9000, 9001, 9200, 15672,
+    5050, 8081, 8025, 8888
   ],
+
+  // Mounts
+  "mounts": [
+    "source=${localWorkspaceFolder}/.devcontainer/bash_history,target=/home/notso-user/.bash_history,type=bind,consistency=cached",
+    "source=${localWorkspaceFolder}/.devcontainer/zsh_history,target=/home/notso-user/.zsh_history,type=bind,consistency=cached"
+  ],
+  "name": "SaaS Chatbot Platform",
 
   "portsAttributes": {
     "3000": { "label": "Main API", "onAutoForward": "notify" },
@@ -186,25 +183,21 @@
     "9200": { "label": "Elasticsearch", "onAutoForward": "silent" },
     "15672": { "label": "RabbitMQ Management", "onAutoForward": "notify" }
   },
+  "postAttachCommand": "bash .devcontainer/post-attach.sh",
 
   // Startup commands
   "postCreateCommand": "bash .devcontainer/post-create.sh",
   "postStartCommand": "bash .devcontainer/post-start.sh",
-  "postAttachCommand": "bash .devcontainer/post-attach.sh",
 
   // Environment variables
   "remoteEnv": {
-    "NODE_ENV": "development",
+    "COMPOSE_DOCKER_CLI_BUILD": "1",
     "DOCKER_BUILDKIT": "1",
-    "COMPOSE_DOCKER_CLI_BUILD": "1"
+    "NODE_ENV": "development"
   },
 
-  // Mounts
-  "mounts": [
-    "source=${localWorkspaceFolder}/.devcontainer/bash_history,target=/home/notso-user/.bash_history,type=bind,consistency=cached",
-    "source=${localWorkspaceFolder}/.devcontainer/zsh_history,target=/home/notso-user/.zsh_history,type=bind,consistency=cached"
-  ],
-
   // Run as non-root user
-  "remoteUser": "notso-user"
+  "remoteUser": "notso-user",
+  "service": "app",
+  "workspaceFolder": "/workspace"
 }
