--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,21 +1,4 @@
 {
-  "name": "@saas/api",
-  "version": "0.0.1",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "tsx watch src/main.ts",
-    "build": "tsup",
-    "start": "node dist/main.js",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
-    "lint": "eslint .",
-    "type-check": "tsc --noEmit",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:seed": "tsx src/scripts/seed.ts"
-  },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/helmet": "^13.0.1",
@@ -29,6 +12,8 @@
     "@saas/domain": "workspace:*",
     "@saas/types": "workspace:*",
     "@saas/utils": "workspace:*",
+    "@types/bcryptjs": "^3.0.0",
+    "bcryptjs": "^3.0.2",
     "bullmq": "^5.56.4",
     "fastify": "^5.4.0",
     "fastify-plugin": "^5.0.1",
@@ -41,6 +26,7 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@saas/tsconfig": "workspace:*",
     "@types/node": "^24.0.13",
     "@vitest/coverage-v8": "^3.2.4",
     "prisma": "^6.11.1",
@@ -48,5 +34,22 @@
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
-  }
+  },
+  "name": "@saas/api",
+  "private": true,
+  "scripts": {
+    "build": "tsup",
+    "db:generate": "echo 'Prisma client is generated in @saas/database package'",
+    "db:migrate": "echo 'Run db:migrate from root'",
+    "db:push": "echo 'Run db:push from root'",
+    "db:seed": "tsx src/scripts/seed.ts",
+    "dev": "tsx watch src/main.ts",
+    "lint": "eslint .",
+    "start": "node dist/main.js",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "type-check": "tsc --noEmit"
+  },
+  "type": "module",
+  "version": "0.0.1"
 }
