--- a/apps/websocket/tsconfig.json
+++ b/apps/websocket/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "@saas/tsconfig/base.json",
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "extends": "@saas/tsconfig/node.json",
+  "include": ["src/**/*"]
 }
