--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,9 +1,12 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "declaration": true,
+    "declarationMap": true,
     "outDir": "./dist",
-    "rootDir": "."
+    "rootDir": ".",
+    "sourceMap": true
   },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "extends": "@saas/tsconfig/base.json",
+  "include": ["index.ts", "prisma/seed.ts"]
 }
