--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "@saas/tsconfig",
-  "version": "0.0.1",
-  "private": true,
   "description": "Shared TypeScript configurations",
-  "files": [
-    "base.json",
-    "node.json",
-    "nextjs.json"
-  ]
+  "files": ["base.json", "node.json", "nextjs.json"],
+  "name": "@saas/tsconfig",
+  "private": true,
+  "version": "0.0.1"
 }
