feat: comprehensive type safety improvements
- Replace all any types with proper type definitions
- Create shared types for metadata, configs, and dynamic values
- Add specific filter types for repositories
- Implement proper error context types
- Update AI providers with specific message format types
- Fix domain event generics for type safety
- Add proper BullMQ job option types
- Create dedicated types for analytics and alerts
- Update all entities to use typed metadata
- Fix biome linting and formatting issues

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "bugs": {
     "url": "https://github.com/kjanat/notso-saas/issues"
   },
+  "dependencies": {
+    "nanoid": "^5.1.5"
+  },
   "description": "Multi-tenant AI-powered customer service chatbot platform",
   "devDependencies": {
     "@biomejs/biome": "2.1.1",
