--- a/packages/shared/domain/package.json
+++ b/packages/shared/domain/package.json
@@ -1,22 +1,4 @@
 {
-  "name": "@saas/domain",
-  "version": "0.0.1",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
-    "clean": "rm -rf dist",
-    "typecheck": "tsc --noEmit"
-  },
   "dependencies": {
     "@saas/types": "workspace:*",
     "@saas/utils": "workspace:*"
@@ -25,5 +7,23 @@
     "@types/node": "^24.0.13",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
-  }
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "name": "@saas/domain",
+  "scripts": {
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "clean": "rm -rf dist",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
+    "typecheck": "tsc --noEmit"
+  },
+  "types": "./dist/index.d.ts",
+  "version": "0.0.1"
 }
