--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,37 @@
 {
   "compilerOptions": {
-    "target": "ES2024",
-    "lib": ["ES2024"],
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
     "allowJs": true,
-    "noEmit": true,
-    "incremental": true,
+    "baseUrl": ".",
     "composite": true,
     "declaration": true,
     "declarationMap": true,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "incremental": true,
     "inlineSources": false,
     "isolatedModules": true,
+    "lib": ["ES2024"],
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "preserveWatchOutput": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "types": [],
-    "baseUrl": ".",
     "paths": {
-      "@saas/shared/*": ["packages/shared/*/src"],
-      "@saas/database": ["packages/database/src"],
-      "@saas/auth": ["packages/auth-service/src"],
-      "@saas/api": ["packages/api/src"],
       "@saas/ai": ["packages/ai-service/src"],
+      "@saas/api": ["packages/api/src"],
+      "@saas/auth": ["packages/auth-service/src"],
+      "@saas/database": ["packages/database/src"],
+      "@saas/shared/*": ["packages/shared/*/src"],
       "@saas/websocket": ["packages/websocket-service/src"]
-    }
+    },
+    "preserveWatchOutput": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "ES2024",
+    "types": []
   },
   "exclude": ["node_modules", "dist", "build", ".next", "coverage"]
 }
