--- a/packages/shared/types/tsconfig.json
+++ b/packages/shared/types/tsconfig.json
@@ -1,15 +1,15 @@
 {
-  "extends": "../../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "noEmit": false,
     "composite": false,
-    "incremental": false,
     "declaration": true,
     "declarationMap": true,
+    "incremental": false,
+    "noEmit": false,
+    "outDir": "./dist",
+    "rootDir": "./src",
     "types": ["node"]
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "extends": "../../../tsconfig.json",
+  "include": ["src/**/*"]
 }
