--- a/turbo.json
+++ b/turbo.json
@@ -4,28 +4,8 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", "build/**", ".next/**"],
-      "env": ["NODE_ENV", "DATABASE_URL", "REDIS_URL"]
-    },
-    "dev": {
-      "cache": false,
-      "persistent": true,
-      "dependsOn": ["^build"]
-    },
-    "test": {
-      "dependsOn": ["build"],
-      "outputs": ["coverage/**"],
-      "env": ["NODE_ENV"]
-    },
-    "test:e2e": {
-      "dependsOn": ["build"],
-      "env": ["NODE_ENV", "DATABASE_URL"]
-    },
-    "lint": {
-      "outputs": []
-    },
-    "type-check": {
-      "outputs": []
+      "env": ["NODE_ENV", "DATABASE_URL", "REDIS_URL"],
+      "outputs": ["dist/**", "build/**", ".next/**"]
     },
     "clean": {
       "cache": false
@@ -34,17 +14,37 @@
       "cache": false,
       "env": ["DATABASE_URL"]
     },
-    "db:push": {
+    "db:migrate": {
       "cache": false,
       "env": ["DATABASE_URL"]
     },
-    "db:migrate": {
+    "db:push": {
       "cache": false,
       "env": ["DATABASE_URL"]
     },
     "db:seed": {
       "cache": false,
       "env": ["DATABASE_URL"]
+    },
+    "dev": {
+      "cache": false,
+      "dependsOn": ["^build"],
+      "persistent": true
+    },
+    "lint": {
+      "outputs": []
+    },
+    "test": {
+      "dependsOn": ["build"],
+      "env": ["NODE_ENV"],
+      "outputs": ["coverage/**"]
+    },
+    "test:e2e": {
+      "dependsOn": ["build"],
+      "env": ["NODE_ENV", "DATABASE_URL"]
+    },
+    "type-check": {
+      "outputs": []
     }
   }
 }
