--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.1.1",
     "@eslint/js": "^9.31.0",
+    "@swc/core": "^1.12.14",
     "@types/node": "^24.0.13",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
