fix: prevent biome from reordering package.json exports
- Add biome override to disable useSortedKeys for package.json files
- Restore correct export ordering (types first) in all package.json files
- Prevents TypeScript export condition warnings during build

Build now completes cleanly without any warnings.

--- a/biome.json
+++ b/biome.json
@@ -164,6 +164,16 @@
   },
   "overrides": [
     {
+      "assist": {
+        "actions": {
+          "source": {
+            "useSortedKeys": "off"
+          }
+        }
+      },
+      "includes": ["**/package.json"]
+    },
+    {
       "includes": ["**/*.ts", "**/*.tsx"],
       "javascript": { "globals": [] },
       "linter": {
