feat: comprehensive testing framework integration with Turbo monorepo
- Add Vitest for unit and integration testing with ESM/TypeScript support
- Configure Playwright for E2E API testing
- Create shared test utilities package (@saas/test-utils) for DRY testing
- Integrate granular test pipelines with Turbo (unit, integration, e2e, coverage)
- Add comprehensive test suites for tenant module (unit, integration, E2E)
- Set up GitHub Actions CI/CD pipeline with PostgreSQL and Redis services
- Configure test coverage thresholds (80% statements, 75% branches, 90% functions)
- Add health check endpoint with dependency monitoring
- Fix all Biome linting issues and improve type safety
- Import proper Job type from BullMQ instead of using unknown
- Update all references from 'main' to 'master' branch

Test structure:
- Unit tests: Fast, isolated testing with mocks
- Integration tests: API endpoint testing with real database
- E2E tests: Complete user flows with authentication

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@saas/test-utils": "workspace:*",
     "@saas/tsconfig": "workspace:*",
     "@types/node": "^24.0.13",
     "@vitest/coverage-v8": "^3.2.4",
@@ -46,8 +47,11 @@
     "dev": "tsx watch src/main.ts",
     "lint": "eslint .",
     "start": "node dist/main.js",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
+    "test": "vitest run",
+    "test:unit": "vitest run src/**/*.test.ts",
+    "test:integration": "vitest run tests/integration/**/*.test.ts",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "type-check": "tsc --noEmit"
   },
   "type": "module",
