fix: resolve GitHub Actions CI issues
- Fix import ordering in worker processor files per ESLint rules
- Replace any types with proper typed alternatives in test files
- Update lint scripts to only check src directories, not dist
- Use proper Job type from BullMQ in test mocks
- Add bullmq dependency to test-utils package

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -45,7 +45,7 @@
     "db:push": "echo 'Run db:push from root'",
     "db:seed": "tsx src/scripts/seed.ts",
     "dev": "tsx watch src/main.ts",
-    "lint": "eslint .",
+    "lint": "eslint src",
     "start": "node dist/main.js",
     "test": "vitest run",
     "test:unit": "vitest run src/**/*.test.ts",
