--- a/apps/websocket/tsconfig.json
+++ b/apps/websocket/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "types": ["node", "@types/node"]
   },
   "exclude": ["node_modules", "dist"],
   "extends": "@saas/tsconfig/node.json",
