--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -14,6 +14,7 @@
     "@saas/tsconfig": "workspace:*",
     "@types/ioredis": "^5.0.0",
     "@types/node": "^24.0.13",
+    "pino-pretty": "^13.0.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
