--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,11 @@ UPLOAD_DIR=./uploads
 # Monitoring (Production)
 # SENTRY_DSN=https://...@sentry.io/...
 # OTEL_ENDPOINT=http://localhost:4317
+
+# Queue Configuration
+# QUEUE_PREFIX=bull                    # Prefix for Redis queue keys (default: bull)
+# AI_QUEUE_NAME=ai-processing          # Name of the AI processing queue (default: ai-processing)
+
+# Seed Data Security
+# ADMIN_PASSWORD=SecureAdm!n2025#Dev   # Admin password for database seeding (default shown for dev only)
+# DEMO_PASSWORD=DemoUser@2025!         # Demo user password for database seeding (default shown for dev only)
