--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,12 +22,14 @@
     "pino": "^9.7.0",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0",
+    "uuid": "^11.1.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@saas/test-utils": "workspace:*",
     "@saas/tsconfig": "workspace:*",
     "@types/node": "^24.0.13",
+    "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "pino-pretty": "^13.0.0",
     "prisma": "^6.11.1",
